# fitme_ai_mvp

./: .env.cloud.example  .env.example  .env.local.example  .env.test.example  .gitignore  FitMe_AI_BACKEND_DEVELOPMENT_GUIDE.md  FitMe_AI_FRONTEND_DEVELOPMENT_GUIDE.md  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
ai-services/vton/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
ai-services/vton/app/: __init__.py  category_mapper.py  composite.py  image_preflight.py  main.py
ai-services/vton/app/providers/: __init__.py  base.py  fashn_local.py  hf_idmvton.py  mock.py  replicate_idmvton.py
ai-services/vton/tests/: test_api.py  test_category_mapper.py
backend/: Dockerfile  pom.xml
deploy/: nginx-api.conf
docs/: AI_ARCHITECTURE.md  AI_ROADMAP.md  API_CONTRACT.md  ARCHITECTURE.md  DEPLOY_TEST.md  DEPLOY_VERCEL_RENDER_NEON.md  DEVELOPER_GUIDE.md  FASHN_VTON_INTEGRATION.md  LOCAL_AI_DEV.md  QA_REPORT.md  STITCH_UI_REDESIGN_BRIEF.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: admin-full.spec.ts  admin-portal.spec.ts  ai-extras.spec.ts  auth-flow.spec.ts  auth-pages.spec.ts  brand-billing.spec.ts  brand-full.spec.ts  brand-portal.spec.ts  consultation-anonymous.spec.ts  discover.spec.ts  mobile-nav.spec.ts  navigation.spec.ts  rbac.spec.ts  (+10 more)
scripts/: ci-e2e.sh  deploy-test.ps1  deploy-test.sh  dev-local.ps1  dev-local.sh  setup-local-env.ps1  test-all.sh  test-flows.ps1
(+648 files in other folders)
